@@ -1,14 +1,7 @@
 package com.example.Follicare.seed;
 
-import com.example.Follicare.model.Favorites;
-import com.example.Follicare.model.Profiles;
-import com.example.Follicare.model.Specialist;
-import com.example.Follicare.model.User;
-import com.example.Follicare.repository.FavoritesRepository;
-import com.example.Follicare.repository.ProfileRepository;
-import com.example.Follicare.repository.SpecialistRepository;
-import com.example.Follicare.repository.UserRepository;
-import com.example.Follicare.service.UserService;
+import com.example.Follicare.model.*;
+import com.example.Follicare.repository.*;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.CommandLineRunner;
 import org.springframework.stereotype.Component;
@@ -19,11 +12,11 @@ import java.util.List;
 @Component
 public class UserData implements CommandLineRunner {
 
-    @Autowired
-    UserRepository userRepository;
+//    @Autowired
+//    UserRepository userRepository;
 
-    @Autowired
-    UserService userService;
+//    @Autowired
+//    UserService userService;
 
     @Autowired
     ProfileRepository profileRepository;
@@ -34,51 +27,71 @@ public class UserData implements CommandLineRunner {
     @Autowired
     SpecialistRepository specialistRepository;
 
+    @Autowired
+    ResourcesRepository resourcesRepository;
 
     @Override
-    public void run(String... args) throws Exception {
+    public void run(String... args) {
         loadUserData();
     }
 
     private void loadUserData() {
-        if (userRepository.count() == 0 && profileRepository.count() == 0 && favoritesRepository.count() == 0 && specialistRepository.count() == 0) {
-            // Seed data for initial setup
-            User porsha = new User(1L, "PorshaW", "porshaw@gmail.com", "porsha1");
-            User bob = new User(2L, "BoBWhit", "BobW@gmail.com", "bob2");
-            User kandi = new User(3L, "Kandi1", "kandib@gmail.com", "excape4");
 
-            userService.createUser(porsha);
-            userService.createUser(bob);
-            userService.createUser(kandi);
+            // Seed data for initial setup
+//            User porsha = new User(1L, "PorshaW", "porshaw@gmail.com", "porsha1");
+//            User bob = new User(2L, "BoBWhit", "BobW@gmail.com", "bob2");
+//            User kandi = new User(3L, "Kandi1", "kandib@gmail.com", "excape4");
+
+//            userService.createUser(porsha);
+//            userService.createUser(bob);
+//            userService.createUser(kandi);
 
             Profiles porshaProfile = new Profiles(1L, "Porsha", "Williams", "Traction Alopecia", "There are a few thin spots of hair along my hairline. I tend to wear my hair in tight ponytails.", "48205");
             Profiles bobProfile = new Profiles(2L, "Bob", "Whitfield", "Male Pattern Baldness", "My hairline has been reseeding as the years have gone by. My hair is thin and more fragile than usual.", "49505");
             Profiles kandiProfile = new Profiles(3L, "Kandi", "Burress", "Alopecia Areata", "I have a few bald spots throughout my head. They range from the size of dimes to the size of quarters.", "48205");
 
-            porshaProfile.setUser(porsha);
-            porshaProfile.setUser(bob);
-            porshaProfile.setUser(kandi);
+//            porshaProfile.setUser(porsha);
+//            porshaProfile.setUser(bob);
+//            porshaProfile.setUser(kandi);
 
-            profileRepository.save(porshaProfile);
-            profileRepository.save(bobProfile);
-            profileRepository.save(kandiProfile);
+            Profiles porshaSavedProfile = profileRepository.save(porshaProfile);
+            Profiles bobSavedProfile = profileRepository.save(bobProfile);
+            Profiles kandiSavedProfile =profileRepository.save(kandiProfile);
 
-            System.out.println(porshaProfile);
 
             // Seed data for initial setup
-            Specialist specialist1 = new Specialist(1L, "Brandy", "Singer", "Alopecia Areata", "49505", "brandy@gmail.com", "333-333-3333");
-            Specialist specialist2 = new Specialist(2L, "Byron", "Test", "Alopecia Areata", "49502", "byron@gmail.com", "333-333-3333");
-            Specialist specialist3 = new Specialist(3L, "Darius", "Lewis", "Male Pattern Baldness", "48205", "darius@gmail.com", "333-333-3333");
+            Specialist specialist1 = new Specialist(1L, "Brandy", "Singer", "Alopecia Areata, Dermatology", "49505", "brandy@gmail.com", "123-456-7809");
+            Specialist specialist2 = new Specialist(2L, "Byron", "Test", "Alopecia Areata, Trichology", "49502", "byron@gmail.com", "987-654-3120");
+            Specialist specialist3 = new Specialist(3L, "Darius", "Lewis", "Male Pattern Baldness", "48205", "darius@gmail.com", "394-294-6740");
 
-            specialistRepository.save(specialist1);
-            specialistRepository.save(specialist2);
-            specialistRepository.save(specialist3);
+            specialistRepository.saveAll(Arrays.asList(specialist1, specialist2, specialist3));
 
-            Favorites porshaFavorites = new Favorites();
-            porshaFavorites.setProfiles(List.of(porshaProfile));
-            porshaFavorites.setSpecialist(specialist1);
-            favoritesRepository.save(porshaFavorites);
+            Favorites porshaFavorites = new Favorites(specialist1.getId());
+            Favorites kandiFavorites = new Favorites(specialist3.getId());
+
+            porshaFavorites.setProfile(porshaSavedProfile);
+            kandiFavorites.setProfile(kandiSavedProfile);
+
+            favoritesRepository.saveAll(Arrays.asList(porshaFavorites, kandiFavorites));
+
+
+        Resources resource1 = new Resources();
+        resource1.setTitle("Understanding Hair Loss: Causes and Treatments");
+        resource1.setAuthor("Dr. Samantha Roberts");
+        resource1.setDescription("A comprehensive guide on the causes and treatments of hair loss.");
+        resourcesRepository.save(resource1);
+
+        Resources resource2 = new Resources();
+        resource2.setTitle("Caring for Your Hair: Tips and Advice");
+        resource2.setAuthor("Hair Care Magazine");
+        resource2.setDescription("Practical tips and advice for maintaining healthy hair.");
+        resourcesRepository.save(resource2);
+
+        Resources resource3 = new Resources();
+        resource3.setTitle("Living with Alopecia: Personal Stories and Support");
+        resource3.setAuthor("Alopecia Support Group");
+        resource3.setDescription("Real-life stories and support for individuals living with alopecia.");
+        resourcesRepository.save(resource3);
 
         }
-    }
 }
